kube/python-k8s-sample-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-k8s-sample-service
  labels:
    app: python-k8s-sample-label
spec:
  type: LoadBalancer 
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: python-k8s-sample-label
